improve frontend camera
